--- a/Site/Website/Views/Shared/_Layout.cshtml
+++ b/Site/Website/Views/Shared/_Layout.cshtml
@@ -6,13 +6,14 @@
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <meta name="viewport" content="width=device-width" />
         @Styles.Render("~/Content/css")
+        @Styles.Render("~/Content/cerulean")
         @Scripts.Render("~/bundles/modernizr")
     </head>
     <body>
         <header>
             <div class="content-wrapper">
                 <div class="float-left">
-                    <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
+                    <p class="site-title">Bugzbgonne</p>
                 </div>
                 <div class="float-right">
                     <section id="login">
@@ -20,16 +21,21 @@
                     </section>
                     <nav>
                         <ul id="menu">
-                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                            <li>@Html.ActionLink("About", "About", "Home")</li>
-                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                            @*                          @Html.Bootstrap().Begin(new Nav().Style(NavType.List).Stacked())*@
+                            <li>@Html.ActionLink("Bugs List", "Index", "Bug")</li>
+                            <li>@Html.ActionLink("Create Bug", "CreateNewBug", "Bug")</li>
+                               @if (User.IsInRole("Team Leader"))
+                                {
+                                    <li>@Html.ActionLink("Create new member", "CreateTeamMember", "Bug")</li>
+                                    <li>@Html.ActionLink("Create new project", "CreateProject", "Bug")</li>
+                                }
                         </ul>
                     </nav>
                 </div>
             </div>
         </header>
         <div id="body">
-            @RenderSection("featured", required: false)
+            @RenderSection("featured", false)
             <section class="content-wrapper main-content clear-fix">
                 @RenderBody()
             </section>
@@ -43,6 +49,6 @@
         </footer>
 
         @Scripts.Render("~/bundles/jquery")
-        @RenderSection("scripts", required: false)
+        @RenderSection("scripts", false)
     </body>
 </html>
